--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,11 @@
+@article{gellertmarkov,
+    author = {{Á}rpád {G}ellért and Adrian Florea and Ugo Fiore and Francesco Palmieri and Paolo Zanetti},
+    year = {2019},
+    month = {January},
+    title = {A study on forecasting electricity production and consumption in smart cities and factories},
+    journal = {International Journal of Information Management, Elsevier},
+}
+
 @Misc{enerdata,
     author = {Enerdata},
     title = {Electricity domestic consumption},
@@ -5,143 +13,66 @@
     year = {2018},
     note = {\url{https://yearbook.enerdata.net/electricity/electricity-domestic-consumption-data.html}, Accessed December 2018},
 }
+
 @article{bouzerdoum,
-    author = {Bouzerdoum, M and Mellit, Adel and Massi Pavan, Alessandro},
+    author = {Bouzerdoum, M. and Mellit, Adel and Massi Pavan, Alessandro},
     year = {2013},
-    month = {12},
+    month = {December},
     pages = {226–235},
-    title = {A hybrid model (SARIMA–SVM) for short-term power forecasting of a small-scale grid-connected photovoltaic plant},
+    title = {A hybrid model ({SARIMA}–{SVM}) for short-term power forecasting of a small-scale grid-connected photovoltaic plant},
     volume = {98},
     journal = {Solar Energy},
     doi = {10.1016/j.solener.2013.10.002}
 }
-@book{fpp2,
-    author = {Rob J Hyndman and George Athanasopoulos},
-    title = {Forecasting: Principles and Practice, 2nd edition},
-    date = {December 2018},
-}
+
 @inproceedings{Rdesign,
     author = {Morandat, Floréal and Hill, Brandon and Osvald, Leo and Vitek, Jan},
     year = {2012},
-    month = {06},
+    month = {June},
     pages = {104-131},
-    title = {Evaluating the Design of the R Language - Objects and Functions for Data Analysis},
+    title = {Evaluating the {D}esign of the {R} Language - {O}bjects and {F}unctions for {D}ata {A}nalysis},
     volume = {7313},
     doi = {10.1007/978-3-642-31057-7_6}
 }
 
 @Misc{feilmeier,
     author = {Stefan Feilmeier},
-    title = {Loads management based on Photovoltaic and Energy Storage System},
-    date = {July 2015},
+    title = {Loads management based on {P}hotovoltaic and {E}nergy {S}torage {S}ystem. {MS}c {T}hesis, "{L}ucian {B}laga" {U}niversity of {S}ibiu, {S}upervisor: {Á}rpád {G}ellért},
+    year = {2015},
 }
 
 @Misc{antonescu,
-    author = {Antonescu Vasile Catalin, Conf. Dr. Ing. Árpád Gellért},
-    title = {Predicția Consumului Și a Producției De Energie Folosind Metode Contextuale},
-    date = {July 2017},
+    author = {Vasile Catalin Antonescu},
+    title = {Predicția {C}onsumului și a {P}roducției de {E}nergie {F}olosind {M}etode {C}ontextuale. {BS}c {T}hesis, "{L}ucian {B}laga" {U}niversity of {S}ibiu, {S}upervisor: {Á}rpád {G}ellért},
+    year = {2017},
 }
 
 @Misc{oxfordForecast,
     author = {Oxford University Press},
-    title = {Definition of forecast in English},
+    title = {Definition of forecast in {E}nglish},
     note = {\url{https://en.oxforddictionaries.com/definition/forecast}, Accessed December 2018},
 }
 
 @book{boxjenkins,
     author = {George E. P. Box, Gwilym M. Jenkins, Gregory C. Reinsel, Greta M. Ljung},
     title = {Time Series Analysis: Forecasting and Control, 5th Edition},
-    date = {June 2015},
+    year = {2015},
+    month = {June},
 }
-
-@Misc{fpp2nonseasonalarima,
-    author = {Rob J Hyndman and George Athanasopoulos},
-    title = {Non-seasonal ARIMA models},
-    date = {December 2018},
-    note = {\url{https://otexts.org/fpp2/non-seasonal-arima.html}, Accessed December 2018},
-}
-
-@Misc{fpp2seasonalarima,
-    author = {Rob J Hyndman and George Athanasopoulos},
-    title = {Seasonal ARIMA models},
-    date = {December 2018},
-    note = {\url{https://otexts.org/fpp2/seasonal-arima.html}, Accessed December 2018},
-}
-
-
-@Misc{fpp2arimainr,
-    author = {Rob J Hyndman and George Athanasopoulos},
-    title = {ARIMA in R},
-    date = {December 2018},
-    note = {\url{https://otexts.com/fpp2/arima-r.html}, Accessed February 2019},
-}
-
-@Misc{hyndmanseasonalperiods,
-    author = {Rob J Hyndman},
-    title = {Seasonal periods},
-    date = {November 2014},
-    note = {\url{https://robjhyndman.com/hyndsight/seasonal-periods/}, Accessed December 2018},
-}
-
-@Misc{hyndmanarimax,
-    author = {Rob J Hyndman},
-    title = {The ARIMAX model muddle},
-    date = {October 2010},
-    note = {\url{https://robjhyndman.com/hyndsight/arimax/}, Accessed December 2018},
-}
-@Misc{fpp2dhr,
-    author = {Rob J Hyndman and George Athanasopoulos},
-    title = {Dynamic harmonic regression},
-    date = {December 2018},
-    note = {\url{https://otexts.org/fpp2/dhr.html}, Accessed December 2018},
-}
-
 
 @Misc{berkleysarimamodels,
     author = {Arturo Fernandez},
-    title = {SARIMA models},
-    date = {2017},
+    title = {{SARIMA} models},
+    year = {2017},
     note = {\url{https://www.stat.berkeley.edu/~arturof/Teaching/STAT248/lab07_part1.html}, Accessed December 2018},
-}
-
-@Misc{nauarimax,
-    author = {Robert Nau},
-    title = {ARIMA models with regressors},
-    date = {June 2018},
-    note = {\url{https://people.duke.edu/~rnau/arimreg.htm}, Accessed December 2018},
-}
-
-@Misc{fpp2arimax,
-    author = {Rob J Hyndman and George Athanasopoulos},
-    title = {Regression with ARIMA errors in R},
-    date = {December 2018},
-    note = {\url{https://otexts.org/fpp2/regarima.html}, Accessed December 2018},
-}
-
-@Misc{fpp2usefulpredictors,
-    author = {Rob J Hyndman and George Athanasopoulos},
-    title = {Some useful predictors},
-    date = {December 2018},
-    note = {\url{https://otexts.org/fpp2/useful-predictors.html}, Accessed December 2018},
-}
-
-@article{automatictimeseriesforecasting,
-    author = {Hyndman, Rob and Khandakar, Yeasmin},
-    year = {2008},
-    month = {07},
-    pages = {},
-    title = {Automatic time series forecasting: the forecast package for {R}},
-    volume = {26},
-    journal = {Journal of Statistical Software},
-    doi = {10.18637/jss.v027.i03}
 }
 
 @article{markovpersonmovement,
     author = {Gellert, Arpad and Vintan, Lucian},
     year = {2006},
-    month = {03},
+    month = {March},
     pages = {17-30},
-    title = {Person Movement Prediction Using Hidden Markov Models},
+    title = {Person {M}ovement {P}rediction {U}sing {H}idden {M}arkov {M}odels},
     volume = {15},
     journal = {Studies in Informatics and Control}
 }
@@ -149,7 +80,7 @@
 @article{pedrocoimbra,
     author = {T.C. Pedro, Hugo and F.M. Coimbra, Carlos},
     year = {2012},
-    month = {07},
+    month = {July},
     pages = {2017-2028},
     title = {Assessment of forecasting techniques for solar power production with no exogenous inputs},
     volume = {86},
@@ -158,7 +89,7 @@
 }
 
 @article{ding2011ann,
-    title={An ANN-based approach for forecasting the power output of photovoltaic system},
+    title={An {ANN}-based approach for forecasting the power output of photovoltaic system},
     author={Ding, Ming and Wang, Lei and Bi, Rui},
     journal={Procedia Environmental Sciences},
     volume={11},
@@ -174,13 +105,6 @@
     url={https://books.google.ro/books?id=ZuKTvERuPG8C},
     year={2011},
     publisher={Farrar, Straus and Giroux}
-}
-
-@Misc{fpp2simplemethods,
-    author = {Rob J Hyndman and George Athanasopoulos},
-    title = {Some simple forecasting methods},
-    date = {December 2018},
-    note = {\url{https://otexts.org/fpp2/simple-methods.html}, Accessed December 2018},
 }
 
 @article{hindsightbias,
@@ -214,57 +138,20 @@
     publisher={Cambridge University Press}
 }
 
-@Manual{rforecastpackage,
-    title = {{forecast}: Forecasting functions for time series and linear models},
-    author = {Rob Hyndman and George Athanasopoulos and Christoph
-    Bergmeir and Gabriel Caceres and Leanne Chhay and Mitchell
-    O'Hara-Wild and Fotios Petropoulos and Slava Razbash and Earo
-    Wang and Farah Yasmeen},
-    year = {2018},
-    note = {R package version 8.4},
-    url = {http://pkg.robjhyndman.com/forecast},
-}
-
 @Misc{RassignOps,
     author = {R Documentation},
     title = {Assignment Operators},
-    date = {October 2018},
+    year = {2018},
+    month = {October},
     note = {\url{https://www.rdocumentation.org/packages/base/versions/3.5.2/topics/assignOps}, Accessed January 2019},
 }
 
 @Misc{pythongrowth,
     author = {David Robinson},
-    title = {The Incredible Growth of Python },
-    date = {September 2017},
+    title = {The {I}ncredible {G}rowth of {P}ython},
+    year = {2017},
+    month = {September},
     note = {\url{https://stackoverflow.blog/2017/09/06/incredible-growth-python/}, Accessed January 2019},
-}
-
-@Misc{fpp2tspatterns,
-    author = {Rob J Hyndman and George Athanasopoulos},
-    title = {Time series patterns},
-    date = {December 2018},
-    note = {\url{https://otexts.org/fpp2/tspatterns.html}, Accessed January 2019},
-}
-
-@Misc{fpp2seasonalplot,
-    author = {Rob J Hyndman and George Athanasopoulos},
-    title = {Seasonal plots},
-    date = {December 2018},
-    note = {\url{https://otexts.org/fpp2/seasonal-plots.html}, Accessed January 2019},
-}
-
-@Misc{fpp2subseriesplot,
-    author = {Rob J Hyndman and George Athanasopoulos},
-    title = {Seasonal subseries plots},
-    date = {December 2018},
-    note = {\url{https://otexts.org/fpp2/seasonal-subseries-plots.html}, Accessed January 2019},
-}
-
-@Misc{fpp2stationarity,
-    author = {Rob J Hyndman and George Athanasopoulos},
-    title = {Stationarity and differencing},
-    date = {December 2018},
-    note = {\url{https://otexts.org/fpp2/stationarity.html}, Accessed January 2019},
 }
 
 @article{adftest,
@@ -292,7 +179,7 @@
 @article{unitroottestselliott,
     author = {Elliott, Graham and Stock, James and J. Rothenberg, Thomas},
     year = {1996},
-    month = {02},
+    month = {February},
     pages = {813-36},
     title = {Efficient Tests for an Autoregressive Unit Root},
     volume = {64},
@@ -303,7 +190,7 @@
 @article{unitroottestsPhillips,
     author = {Phillips, Peter and Perron, Pierre},
     year = {1986},
-    month = {01},
+    month = {January},
     pages = {},
     title = {Testing for a Unit Root in Time Series Regression},
     volume = {75},
@@ -314,22 +201,218 @@
 @Misc{churvichunitroot,
     author = {Clifford M. Hurvich},
     title = {Differencing and unit root tests},
-    date = {April 2004},
+    month = {April},
+    year = {2004},
     note = {\url{http://pages.stern.nyu.edu/~churvich/Forecasting/Handouts/UnitRoot.pdf}, Accessed January 2019},
 }
 
 @Misc{nielsenunitroot,
     author = {Heino Bohn Nielsen},
     title = {Non-Stationary Time Series and Unit Root Tests},
-    date = {2005},
+    year = {2005},
     note = {\url{http://web.econ.ku.dk/metrics/Econometrics2_05_II/Slides/08_unitroottests_2pp.pdf}, Accessed January 2019},
 }
 
+@Manual{rforecastpackage,
+    title = {{forecast}: Forecasting functions for time series and linear models},
+    author = {Rob J. Hyndman and George Athanasopoulos and Christoph
+    Bergmeir and Gabriel Caceres and Leanne Chhay and Mitchell
+    O'Hara-Wild and Fotios Petropoulos and Slava Razbash and Earo
+    Wang and Farah Yasmeen},
+    year = {2018},
+    note = {R package version 8.4},
+    url = {http://pkg.robjhyndman.com/forecast},
+}
+
+@Misc{fpp2seasonalplot,
+    author = {Rob J. Hyndman and George Athanasopoulos},
+    title = {Seasonal plots},
+    year = {2018},
+    month = {December},
+    note = {\url{https://otexts.org/fpp2/seasonal-plots.html}, Accessed January 2019},
+}
+
+@Misc{fpp2subseriesplot,
+    author = {Rob J. Hyndman and George Athanasopoulos},
+    title = {Seasonal subseries plots},
+    year = {2018},
+    month = {December},
+    note = {\url{https://otexts.org/fpp2/seasonal-subseries-plots.html}, Accessed January 2019},
+}
+
+@Misc{fpp2stationarity,
+    author = {Rob J. Hyndman and George Athanasopoulos},
+    title = {Stationarity and differencing},
+    year = {2018},
+    month = {December},
+    note = {\url{https://otexts.org/fpp2/stationarity.html}, Accessed January 2019},
+}
+
+@Misc{fpp2tspatterns,
+    author = {Rob J. Hyndman and George Athanasopoulos},
+    title = {Time series patterns},
+    year = {2018},
+    month = {December},
+    note = {\url{https://otexts.org/fpp2/tspatterns.html}, Accessed January 2019},
+}
+
+@Misc{fpp2simplemethods,
+    author = {Rob J. Hyndman and George Athanasopoulos},
+    title = {Some simple forecasting methods},
+    year = {2018},
+    month = {December},
+    note = {\url{https://otexts.org/fpp2/simple-methods.html}, Accessed December 2018},
+}
+
+@book{fpp2,
+    author = {Rob J. Hyndman and George Athanasopoulos},
+    title = {Forecasting: Principles and Practice, 2nd edition},
+    year = {2018},
+    month = {December},
+}
+
+@Misc{fpp2nonseasonalarima,
+    author = {Rob J. Hyndman and George Athanasopoulos},
+    title = {Non-seasonal {ARIMA} models},
+    year = {2018},
+    month = {December},
+    note = {\url{https://otexts.org/fpp2/non-seasonal-arima.html}, Accessed December 2018},
+}
+
+@Misc{fpp2seasonalarima,
+    author = {Rob J. Hyndman and George Athanasopoulos},
+    title = {Seasonal {ARIMA} models},
+    year = {2018},
+    month = {December},
+    note = {\url{https://otexts.org/fpp2/seasonal-arima.html}, Accessed December 2018},
+}
+
+@Misc{fpp2arimainr,
+    author = {Rob J. Hyndman and George Athanasopoulos},
+    title = {ARIMA in {R}},
+    year = {2018},
+    month = {December},
+    note = {\url{https://otexts.com/fpp2/arima-r.html}, Accessed February 2019},
+}
+
+@Misc{hyndmanseasonalperiods,
+    author = {Rob J. Hyndman},
+    title = {Seasonal periods},
+    year = {2014},
+    month = {November},
+    note = {\url{https://robjhyndman.com/hyndsight/seasonal-periods/}, Accessed December 2018},
+}
+
+@Misc{hyndmanarimax,
+    author = {Rob J. Hyndman},
+    title = {The {ARIMAX} model muddle},
+    year = {2010},
+    month = {October},
+    note = {\url{https://robjhyndman.com/hyndsight/arimax/}, Accessed December 2018},
+}
+
+@Misc{fpp2dhr,
+    author = {Rob J. Hyndman and George Athanasopoulos},
+    title = {Dynamic harmonic regression},
+    year = {2018},
+    month = {December},
+    note = {\url{https://otexts.org/fpp2/dhr.html}, Accessed December 2018},
+}
+
+@Misc{fpp2arimax,
+    author = {Rob J. Hyndman and George Athanasopoulos},
+    title = {Regression with {ARIMA} errors in {R}},
+    year = {2018},
+    month = {December},
+    note = {\url{https://otexts.org/fpp2/regarima.html}, Accessed December 2018},
+}
+
+@Misc{fpp2usefulpredictors,
+    author = {Rob J. Hyndman and George Athanasopoulos},
+    title = {Some useful predictors},
+    year = {2018},
+    month = {December},
+    note = {\url{https://otexts.org/fpp2/useful-predictors.html}, Accessed December 2018},
+}
+
 @Misc{fpp2transformations,
-    author = {Rob J Hyndman and George Athanasopoulos},
+    author = {Rob J. Hyndman and George Athanasopoulos},
     title = {Transformations and adjustments},
-    date = {December 2018},
+    year = {2018},
+    month = {December},
     note = {\url{https://otexts.org/fpp2/transformations.html}, Accessed January 2019},
+}
+
+@article{automatictimeseriesforecasting,
+    author = {Hyndman, Rob J. and Khandakar, Yeasmin},
+    year = {2008},
+    month = {July},
+    pages = {},
+    title = {Automatic time series forecasting: the forecast package for {R}},
+    volume = {26},
+    journal = {Journal of Statistical Software},
+    doi = {10.18637/jss.v027.i03}
+}
+
+@Misc{fpp2predictors,
+    author = {Rob J. Hyndman and George Athanasopoulos},
+    title = {Selecting predictors},
+    year = {2018},
+    month = {December},
+    note = {\url{https://otexts.org/fpp2/selecting-predictors.html}, Accessed February 2019},
+}
+
+@Misc{fpp2residuals,
+    author = {Rob J. Hyndman and George Athanasopoulos},
+    title = {Residual diagnostics},
+    year = {2018},
+    month = {December},
+    note = {\url{https://otexts.org/fpp2/residuals.html}, Accessed February 2019},
+}
+
+@ARTICLE{Hyndman06anotherlook,
+    author = {Rob J. Hyndman and Anne B. Koehler},
+    title = {Another look at measures of forecast accuracy},
+    journal = {International Journal of Forecasting},
+    year = {2006},
+    pages = {679--688}
+}
+
+
+@Article{forecastpackagearticle,
+    title = {Automatic time series forecasting: the forecast package
+    for {R}},
+    author = {Rob J Hyndman and Yeasmin Khandakar},
+    journal = {Journal of Statistical Software},
+    volume = {26},
+    number = {3},
+    pages = {1--22},
+    year = {2008},
+    url = {http://www.jstatsoft.org/article/view/v027i03},
+}
+
+@article{hyndman2015acf,
+    author = "Hyndman, Rob J.",
+    doi = "10.1214/14-EJS953",
+    fjournal = "Electronic Journal of Statistics",
+    journal = "Electron. J. Statist.",
+    number = "1",
+    pages = "792--796",
+    publisher = "The Institute of Mathematical Statistics and the Bernoulli Society",
+    title = "Discussion of “{H}igh-dimensional autocovariance matrices and optimal linear prediction”",
+    url = "https://doi.org/10.1214/14-EJS953",
+    volume = "9",
+    year = "2015"
+}
+
+@book{hyndman2008forecasting,
+    title={Forecasting with Exponential Smoothing: The State Space Approach},
+    author={Hyndman, Rob J. and Koehler, A.B. and Ord, J.K. and Snyder, R.D.},
+    isbn={9783540719182},
+    series={Springer Series in Statistics},
+    url={https://books.google.ro/books?id=GSyzox8Lu9YC},
+    year={2008},
+    publisher={Springer Berlin Heidelberg}
 }
 
 @article{pearson1895note,
@@ -345,68 +428,48 @@
 @article{stiglercorrelationgalton,
     author = {M. Stigler, Stephen},
     year = {1989},
-    month = {05},
+    month = {May},
     pages = {},
-    title = {Francis {G}alton's Account of the Invention of Correlation},
+    title = {Francis {G}alton's {A}ccount of the {I}nvention of {C}orrelation},
     volume = {4},
     journal = {Statistical Science},
     doi = {10.1214/ss/1177012580}
 }
 
-@Misc{nauregression,
-    author = {Robert Nau},
-    title = {Notes on linear regression analysis},
-    date = {June 2018},
-    note = {\url{https://people.duke.edu/~rnau/Notes_on_linear_regression_analysis--Robert_Nau.pdf}, Accessed January 2019},
-}
-
-@article{hyndman2015acf,
-    author = "Hyndman, Rob J.",
-    doi = "10.1214/14-EJS953",
-    fjournal = "Electronic Journal of Statistics",
-    journal = "Electron. J. Statist.",
-    number = "1",
-    pages = "792--796",
-    publisher = "The Institute of Mathematical Statistics and the Bernoulli Society",
-    title = "Discussion of “High-dimensional autocovariance matrices and optimal linear prediction”",
-    url = "https://doi.org/10.1214/14-EJS953",
-    volume = "9",
-    year = "2015"
-}
-
 @Misc{nauarimaarmarules,
     author = {Robert Nau},
-    title = Identifying the numbers of {AR} or {MA} terms in an {ARIMA} model},
-    date = {June 2018},
+    title = {Identifying the numbers of {AR} or {MA} terms in an {ARIMA} model},
+    year = {2018},
+    month = {June},
     note = {\url{https://people.duke.edu/~rnau/411arim3.htm}, Accessed January 2019},
 }
 
-@book{hyndman2008forecasting,
-    title={Forecasting with Exponential Smoothing: The State Space Approach},
-    author={Hyndman, R. and Koehler, A.B. and Ord, J.K. and Snyder, R.D.},
-    isbn={9783540719182},
-    series={Springer Series in Statistics},
-    url={https://books.google.ro/books?id=GSyzox8Lu9YC},
-    year={2008},
-    publisher={Springer Berlin Heidelberg}
+@Misc{nauregression,
+    author = {Robert Nau},
+    title = {Notes on linear regression analysis},
+    year = {2018},
+    month = {June},
+    note = {\url{https://people.duke.edu/~rnau/Notes_on_linear_regression_analysis--Robert_Nau.pdf}, Accessed January 2019},
+}
+
+@Misc{nauarimax,
+    author = {Robert Nau},
+    title = {{ARIMA} models with regressors},
+    year = {2018},
+    month = {June},
+    note = {\url{https://people.duke.edu/~rnau/arimreg.htm}, Accessed December 2018},
 }
 
 @Misc{nauspectrum,
     author = {Robert Nau},
     title = {Introduction to {ARIMA} models},
-    date = {June 2018},
+    year = {2018},
+    month = {June},
     note = {\url{https://people.duke.edu/~rnau/Slides_on_ARIMA_models--Robert_Nau.pdf}, Accessed December 2018},
 }
 
-@Misc{fpp2residuals,
-    author = {Rob J Hyndman and George Athanasopoulos},
-    title = {Residual diagnostics},
-    date = {December 2018},
-    note = {\url{https://otexts.org/fpp2/residuals.html}, Accessed February 2019},
-}
-
 @article{qqplots,
-    author = {WILK, M. B. and GNANADESIKAN, R.},
+    author = {Wilk, M. B. and Gnanadesikan, R.},
     title = {Probability plotting methods for the analysis for the analysis of data},
     journal = {Biometrika},
     volume = {55},
@@ -419,7 +482,7 @@
 }
 
 @article{ljungboxtest,
-    author = {LJUNG, G. M. and BOX, G. E. P.},
+    author = {Ljung, G. M. and Box, G. E. P.},
     title = {On a measure of lack of fit in time series models},
     journal = {Biometrika},
     volume = {65},
@@ -429,13 +492,6 @@
     doi = {10.1093/biomet/65.2.297},
     URL = {http://dx.doi.org/10.1093/biomet/65.2.297},
     eprint = {/oup/backfile/content_public/journal/biomet/65/2/10.1093/biomet/65.2.297/2/65-2-297.pdf}
-}
-
-@Misc{fpp2predictors,
-    author = {Rob J Hyndman and George Athanasopoulos},
-    title = {Selecting predictors},
-    date = {December 2018},
-    note = {\url{https://otexts.org/fpp2/selecting-predictors.html}, Accessed February 2019},
 }
 
 @article{8020rule,
@@ -459,20 +515,13 @@
     }    
 }
 
-@ARTICLE{Hyndman06anotherlook,
-    author = {Rob J Hyndman and Anne B Koehler},
-    title = {Another look at measures of forecast accuracy},
-    journal = {International Journal of Forecasting},
-    year = {2006},
-    pages = {679--688}
-}
-
 @article{armstrongevaluatingforecastingmethods,
-    author = {Armstrong, J},
+    author = {Armstrong, J.},
     year = {2001},
-    month = {01},
+    month = {January},
+    journal = {Principles of Forecasting},
     pages = {},
-    title = {Evaluating Forecasting Methods},
+    title = {Evaluating {F}orecasting {M}ethods},
     doi = {10.1007/978-0-306-47630-3_20}
 }
 
@@ -500,27 +549,3 @@
     publisher = {Springer-Verlag},
     address = {Berlin, Heidelberg},
 } 
-
-  @Manual{forecastpackagemanual,
-    title = {{forecast}: Forecasting functions for time series and
-    linear models},
-    author = {Rob Hyndman and George Athanasopoulos and Christoph
-    Bergmeir and Gabriel Caceres and Leanne Chhay and Mitchell
-    O'Hara-Wild and Fotios Petropoulos and Slava Razbash and Earo
-    Wang and Farah Yasmeen},
-    year = {2018},
-    note = {R package version 8.4},
-    url = {http://pkg.robjhyndman.com/forecast},
-}
-
-@Article{forecastpackagearticle,
-    title = {Automatic time series forecasting: the forecast package
-    for {R}},
-    author = {Rob J Hyndman and Yeasmin Khandakar},
-    journal = {Journal of Statistical Software},
-    volume = {26},
-    number = {3},
-    pages = {1--22},
-    year = {2008},
-    url = {http://www.jstatsoft.org/article/view/v027i03},
-}
